Overlay text right alignment issue fix - hero block

--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -203,12 +203,12 @@
 .hero.image-background-text-right {
   justify-content: flex-end;
   align-items: center;
-  text-align: right;
+  text-align: left;
   padding: 60px 40px;
 }
 
 .hero.image-background-text-right > div {
-  text-align: right;
+  text-align: left;
   max-width: 600px;
   margin: 0;
 }
@@ -315,7 +315,7 @@ picture {
 .hero.image-background-text-right h5,
 .hero.image-background-text-right h6,
 .hero.image-background-text-right p {
-  text-align: right;
+  text-align: left;
   margin: 0 0 20px 0;
   width: 100%;
   max-width: none;
@@ -323,7 +323,7 @@ picture {
 }
 
 .hero.image-background-text-right .button-container {
-  text-align: right;
+  text-align: left;
   margin-top: 30px;
 }
 
@@ -440,8 +440,9 @@ picture {
   .hero.image-background-text-right h4,
   .hero.image-background-text-right h5,
   .hero.image-background-text-right h6,
-  .hero.image-background-text-right p {
-    text-align: center;
+  .hero.image-background-text-right p,
+  .hero.image-background-text-right .button-container {
+    text-align: left;
   }
   
   .hero.image-background-text-right .button-container {
